--- a/Project 1/Sung-Lee-Project-1.html
+++ b/Project 1/Sung-Lee-Project-1.html
@@ -1764,14 +1764,16 @@ for (i in 1:nrow(playerData)) {
     row &lt;- playerData[i,]
     sum &lt;- 0
     
-    opponents &lt;-  as.integer(str_split(row[7], &quot;,&quot;)[[1]])
+#    opponents &lt;-  as.integer(str_split(row[7], &quot;,&quot;)[[1]])
+    opponents &lt;- unlist(str_split(row$Opponents, &quot;,&quot;))
     for (value in opponents) {
        if (is.na(value) == FALSE) {
-         sum &lt;- sum + playerData[which(playerData$ID == value), 5]
+         sum &lt;- sum + playerData[value, 5]
        }
     }
     
-    newRow &lt;- data.frame((sum / row[6]))
+
+    newRow &lt;- data.frame(round(sum / row[6], digits = 0))
     x &lt;- c(&quot;averageOpponents&quot;)
     names(newRow) &lt;- x
     avgOpponent &lt;- rbind(avgOpponent, newRow)
@@ -1785,7 +1787,7 @@ playerData &lt;- cbind(playerData, avgOpponent)
 head(playerData)</code></pre>
 <div data-pagedtable="false">
 <script data-pagedtable-source type="application/json">
-{"columns":[{"label":[""],"name":["_rn_"],"type":[""],"align":["left"]},{"label":["ID"],"name":[1],"type":["dbl"],"align":["right"]},{"label":["Name"],"name":[2],"type":["fctr"],"align":["left"]},{"label":["State"],"name":[3],"type":["fctr"],"align":["left"]},{"label":["totalPoints"],"name":[4],"type":["dbl"],"align":["right"]},{"label":["preRating"],"name":[5],"type":["dbl"],"align":["right"]},{"label":["NumberofGames"],"name":[6],"type":["dbl"],"align":["right"]},{"label":["Opponents"],"name":[7],"type":["fctr"],"align":["left"]},{"label":["averageOpponents"],"name":[8],"type":["dbl"],"align":["right"]}],"data":[{"1":"1","2":"GARY HUA","3":"ON","4":"6.0","5":"1794","6":"7","7":"39,21,18,14,7,12,4","8":"256.2857","_rn_":"1"},{"1":"2","2":"DAKSHESH DARURI","3":"MI","4":"6.0","5":"1553","6":"7","7":"63,58,4,17,16,20,7","8":"221.8571","_rn_":"2"},{"1":"3","2":"ADITYA BAJAJ","3":"MI","4":"6.0","5":"1384","6":"7","7":"8,61,25,21,11,13,12","8":"197.7143","_rn_":"3"},{"1":"4","2":"PATRICK H SCHILLING","3":"MI","4":"5.5","5":"1716","6":"7","7":"23,28,2,26,5,19,1","8":"245.1429","_rn_":"4"},{"1":"5","2":"HANSHI ZUO","3":"MI","4":"5.5","5":"1655","6":"7","7":"45,37,12,13,4,14,17","8":"236.4286","_rn_":"5"},{"1":"6","2":"HANSEN SONG","3":"OH","4":"5.0","5":"1686","6":"7","7":"34,29,11,35,10,27,21","8":"240.8571","_rn_":"6"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
+{"columns":[{"label":[""],"name":["_rn_"],"type":[""],"align":["left"]},{"label":["ID"],"name":[1],"type":["dbl"],"align":["right"]},{"label":["Name"],"name":[2],"type":["fctr"],"align":["left"]},{"label":["State"],"name":[3],"type":["fctr"],"align":["left"]},{"label":["totalPoints"],"name":[4],"type":["dbl"],"align":["right"]},{"label":["preRating"],"name":[5],"type":["dbl"],"align":["right"]},{"label":["NumberofGames"],"name":[6],"type":["dbl"],"align":["right"]},{"label":["Opponents"],"name":[7],"type":["fctr"],"align":["left"]},{"label":["averageOpponents"],"name":[8],"type":["dbl"],"align":["right"]}],"data":[{"1":"1","2":"GARY HUA","3":"ON","4":"6.0","5":"1794","6":"7","7":"39,21,18,14,7,12,4","8":"1605","_rn_":"1"},{"1":"2","2":"DAKSHESH DARURI","3":"MI","4":"6.0","5":"1553","6":"7","7":"63,58,4,17,16,20,7","8":"1469","_rn_":"2"},{"1":"3","2":"ADITYA BAJAJ","3":"MI","4":"6.0","5":"1384","6":"7","7":"8,61,25,21,11,13,12","8":"1564","_rn_":"3"},{"1":"4","2":"PATRICK H SCHILLING","3":"MI","4":"5.5","5":"1716","6":"7","7":"23,28,2,26,5,19,1","8":"1574","_rn_":"4"},{"1":"5","2":"HANSHI ZUO","3":"MI","4":"5.5","5":"1655","6":"7","7":"45,37,12,13,4,14,17","8":"1501","_rn_":"5"},{"1":"6","2":"HANSEN SONG","3":"OH","4":"5.0","5":"1686","6":"7","7":"34,29,11,35,10,27,21","8":"1519","_rn_":"6"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
   </script>
 </div>
 <pre class="r"><code>#Prepare a new dataframe for export
@@ -1799,7 +1801,7 @@ names(exportCSV) &lt;- x
 head(exportCSV, 13)</code></pre>
 <div data-pagedtable="false">
 <script data-pagedtable-source type="application/json">
-{"columns":[{"label":[""],"name":["_rn_"],"type":[""],"align":["left"]},{"label":["Player’s Name"],"name":[1],"type":["fctr"],"align":["left"]},{"label":["Player’s State"],"name":[2],"type":["fctr"],"align":["left"]},{"label":["Total Number of Points"],"name":[3],"type":["dbl"],"align":["right"]},{"label":["Player’s Pre-Rating"],"name":[4],"type":["dbl"],"align":["right"]},{"label":["Average Pre-Chess Rating of Opponents"],"name":[5],"type":["dbl"],"align":["right"]}],"data":[{"1":"GARY HUA","2":"ON","3":"6.0","4":"1794","5":"256.2857","_rn_":"1"},{"1":"DAKSHESH DARURI","2":"MI","3":"6.0","4":"1553","5":"221.8571","_rn_":"2"},{"1":"ADITYA BAJAJ","2":"MI","3":"6.0","4":"1384","5":"197.7143","_rn_":"3"},{"1":"PATRICK H SCHILLING","2":"MI","3":"5.5","4":"1716","5":"245.1429","_rn_":"4"},{"1":"HANSHI ZUO","2":"MI","3":"5.5","4":"1655","5":"236.4286","_rn_":"5"},{"1":"HANSEN SONG","2":"OH","3":"5.0","4":"1686","5":"240.8571","_rn_":"6"},{"1":"GARY DEE SWATHELL","2":"MI","3":"5.0","4":"1649","5":"235.5714","_rn_":"7"},{"1":"EZEKIEL HOUGHTON","2":"MI","3":"5.0","4":"1641","5":"234.4286","_rn_":"8"},{"1":"STEFANO LEE","2":"ON","3":"5.0","4":"1411","5":"201.5714","_rn_":"9"},{"1":"ANVIT RAO","2":"MI","3":"5.0","4":"1365","5":"195.0000","_rn_":"10"},{"1":"CAMERON WILLIAM MC LEMAN","2":"MI","3":"4.5","4":"1712","5":"244.5714","_rn_":"11"},{"1":"KENNETH J TACK","2":"MI","3":"4.5","4":"1663","5":"277.1667","_rn_":"12"},{"1":"TORRANCE HENRY JR","2":"MI","3":"4.5","4":"1666","5":"238.0000","_rn_":"13"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
+{"columns":[{"label":[""],"name":["_rn_"],"type":[""],"align":["left"]},{"label":["Player’s Name"],"name":[1],"type":["fctr"],"align":["left"]},{"label":["Player’s State"],"name":[2],"type":["fctr"],"align":["left"]},{"label":["Total Number of Points"],"name":[3],"type":["dbl"],"align":["right"]},{"label":["Player’s Pre-Rating"],"name":[4],"type":["dbl"],"align":["right"]},{"label":["Average Pre-Chess Rating of Opponents"],"name":[5],"type":["dbl"],"align":["right"]}],"data":[{"1":"GARY HUA","2":"ON","3":"6.0","4":"1794","5":"1605","_rn_":"1"},{"1":"DAKSHESH DARURI","2":"MI","3":"6.0","4":"1553","5":"1469","_rn_":"2"},{"1":"ADITYA BAJAJ","2":"MI","3":"6.0","4":"1384","5":"1564","_rn_":"3"},{"1":"PATRICK H SCHILLING","2":"MI","3":"5.5","4":"1716","5":"1574","_rn_":"4"},{"1":"HANSHI ZUO","2":"MI","3":"5.5","4":"1655","5":"1501","_rn_":"5"},{"1":"HANSEN SONG","2":"OH","3":"5.0","4":"1686","5":"1519","_rn_":"6"},{"1":"GARY DEE SWATHELL","2":"MI","3":"5.0","4":"1649","5":"1372","_rn_":"7"},{"1":"EZEKIEL HOUGHTON","2":"MI","3":"5.0","4":"1641","5":"1468","_rn_":"8"},{"1":"STEFANO LEE","2":"ON","3":"5.0","4":"1411","5":"1523","_rn_":"9"},{"1":"ANVIT RAO","2":"MI","3":"5.0","4":"1365","5":"1554","_rn_":"10"},{"1":"CAMERON WILLIAM MC LEMAN","2":"MI","3":"4.5","4":"1712","5":"1468","_rn_":"11"},{"1":"KENNETH J TACK","2":"MI","3":"4.5","4":"1663","5":"NA","_rn_":"12"},{"1":"TORRANCE HENRY JR","2":"MI","3":"4.5","4":"1666","5":"1498","_rn_":"13"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
   </script>
 </div>
 </div>
