Added image and introduction

--- a/week5/SungLee-Week5.html
+++ b/week5/SungLee-Week5.html
@@ -1641,6 +1641,9 @@ summary {
 
 
 <p><a href="https://rpubs.com/logicalschema/data607_week5" title="Sung&#39;s Week 5 Assignment Rpubs">Assignment on RPubs</a> <br> <a href="https://github.com/logicalschema/DATA607/blob/master/week5/SungLee-Week5.Rmd" title="Sung&#39;s Week 5 Assignment Github">Rmd on Github</a></p>
+<div id="introduction" class="section level2">
+<h2>Introduction</h2>
+</div>
 
 
 
