Added climdate data web page

--- a/Project 2/Sung-Lee-Project2.html
+++ b/Project 2/Sung-Lee-Project2.html
@@ -1519,8 +1519,24 @@ div.tocify {
 <p><a href="https://rpubs.com/logicalschema/data607_project2" title="Sung&#39;s Project 2 Rpubs">Assignment on RPubs</a> <br> <a href="https://github.com/logicalschema/DATA607/blob/master/Project%202/Sung-Lee-Project2.Rmd" title="Sung&#39;s Project 2 Assignment Github">Rmd on Github</a></p>
 <div id="introduction" class="section level1">
 <h1>Introduction</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quam quam, molestie ac justo quis, aliquet fringilla quam. Fusce at hendrerit tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam pretium mauris et ultricies laoreet. Curabitur sodales ex ac odio congue tempus. Mauris sodales eget tellus eu volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris eget hendrerit tortor.</p>
-<p>Mauris volutpat tincidunt sodales. Vestibulum a sem lacinia, blandit risus id, vehicula massa. Vestibulum vehicula pharetra velit et semper. Nullam non rhoncus massa. Pellentesque laoreet mauris ac metus lobortis dictum. Praesent quis egestas nisi. Nulla quis nunc et quam hendrerit dignissim sit amet id augue. Fusce et nisi et tortor efficitur ullamcorper sed ut justo. Vestibulum luctus ultrices dictum. Ut suscipit quam erat, eu consequat lectus laoreet sit amet. Vestibulum rhoncus arcu vestibulum imperdiet elementum.</p>
+<p>The purpose of this project is to work with three datasets, tidy the data, and repurpose for data analysis. The three datasets I will use are: Leo Yi’s climate data from [<a href="https:/www.usclimatedata.com" class="uri">https:/www.usclimatedata.com</a>], Philip Tanofsky’s Coronavirus data [<a href="https://github.com/CryptoKass/ncov-data/blob/master/world.latest.bno.csv" class="uri">https://github.com/CryptoKass/ncov-data/blob/master/world.latest.bno.csv</a>], and Gehad Gad’s Academic Advising data [<a href="https://raw.githubusercontent.com/logicalschema/DATA607/master/Project%202/Advising.png" class="uri">https://raw.githubusercontent.com/logicalschema/DATA607/master/Project%202/Advising.png</a>].</p>
+<p>I will use the following R libraries.</p>
+<pre class="r"><code>library(stringr)
+library(tidyr)
+library(dplyr)</code></pre>
+<pre><code>## 
+## Attaching package: &#39;dplyr&#39;</code></pre>
+<pre><code>## The following objects are masked from &#39;package:stats&#39;:
+## 
+##     filter, lag</code></pre>
+<pre><code>## The following objects are masked from &#39;package:base&#39;:
+## 
+##     intersect, setdiff, setequal, union</code></pre>
+<pre class="r"><code>library(ggplot2)
+library(rvest)  #This R library allows you to scrap web pages</code></pre>
+<pre><code>## Warning: package &#39;rvest&#39; was built under R version 3.6.3</code></pre>
+<pre><code>## Loading required package: xml2</code></pre>
+<p>#Climate Data []</p>
 </div>
 <div id="quarterly-results" class="section level1 tabset">
 <h1>Quarterly Results</h1>
