--- a/week6/SungLee_Week6.html
+++ b/week6/SungLee_Week6.html
@@ -2787,6 +2787,7 @@ div.tocify {
 </div>
 
 
+<p><a href="https://rpubs.com/logicalschema/data607_week6" title="Sung&#39;s Week 6 Assignment Rpubs">Assignment on RPubs</a> <br> <a href="https://raw.githubusercontent.com/logicalschema/DATA607/master/week6/SungLee_Week6.Rmd" title="Sung&#39;s Week 6 Assignment Github">Rmd on Github</a></p>
 <div id="introduction" class="section level1">
 <h1>Introduction</h1>
 <p>This week’s assignment is to work with the web uibiquitous forms of <code>html</code>, <code>xml</code>, and <code>json</code>. This assignment will work with and identify differences between three files: <code>books.html</code>, <code>books.xml</code>, and <code>books.json</code>. The books in the brief inventory are from the dystopian science fiction genre. One book <em>Looking Backward: 2000-1887</em> by Edward Bellamy has another author Sylvester Baxter writing an introduction. Each book entry has the fields: <code>Title</code>, <code>Authors</code>, <code>ISBN-13</code>, and <code>Pages</code>.</p>
