--- a/project3/Project-3.html
+++ b/project3/Project-3.html
@@ -2858,7 +2858,7 @@ div.tocify {
 </div>
 
 
-<p><a href="https://rpubs.com/logicalschema/data607_project3" title="Data 607 Project 3 Rpubs">Assignment on RPubs</a> <br></p>
+<p><a href="https://rpubs.com/logicalschema/data607_project3" title="Data 607 Project 3 Rpubs">Assignment on RPubs</a> <br> <a href="https://github.com/logicalschema/DATA607/blob/master/project3/Project%203.Rmd" title="Team MPSV Project 3 Assignment GitHub">Rmd on GitHub</a></p>
 <div id="introduction" class="section level1">
 <h1>Introduction</h1>
 </div>
